# multicam

./: .gitignore  CMakeLists.txt
board/: board.ino
config/: Blackfly_S_BFS-U3-16S2C.json  Blackfly_S_BFS-U3-51S5C.json  Flea3_FL3-U3-32S2C.json
include/multicam/: multicam.hpp  trigger.hpp
src/capture/: CMakeLists.txt  main.cpp
src/multicam/: CMakeLists.txt  cam_conf.cpp  cam_conf.hpp  cam_prop.cpp  cam_prop.hpp  flir_inst.cpp  flir_inst.hpp  multicam.cpp  post_proc.cpp  post_proc.hpp  trigger.cpp  trigger.hpp
src/test/: CMakeLists.txt  main.cpp
