CMAKE_MINIMUM_REQUIRED(VERSION 3.0.0)
PROJECT(multicam VERSION 0.1.0)

SET(CMAKE_CXX_STANDARD 11)
SET(CMAKE_CXX_STANDARD_REQUIRED ON)
SET(CMAKE_CXX_EXTENSIONS OFF)

FIND_PACKAGE(OpenMP REQUIRED)
STRING(APPEND CMAKE_CXX_FLAGS " ${OpenMP_CXX_FLAGS}")
STRING(APPEND CMAKE_LINK_FLAGS " ${OpenMP_CXX_FLAGS}")

ADD_SUBDIRECTORY("${CMAKE_SOURCE_DIR}/src/multicam")

ADD_SUBDIRECTORY("${CMAKE_SOURCE_DIR}/src/capture")