
ADD_EXECUTABLE(capture main.cpp)
ADD_DEPENDENCIES(capture ${PROJECT_NAME})

TARGET_INCLUDE_DIRECTORIES(capture
	PRIVATE $<TARGET_PROPERTY:multicam,INTERFACE_INCLUDE_DIRECTORIES>
	)
TARGET_LINK_LIBRARIES(capture
	PRIVATE ${PROJECT_NAME}
	PRIVATE $<TARGET_PROPERTY:multicam,INTERFACE_LINK_LIBRARIES>
	)
