
FIND_PACKAGE(OpenCV REQUIRED "core;imgcodecs;imgproc;highgui")

FIND_PACKAGE(Threads REQUIRED)

FIND_PACKAGE(CUDA REQUIRED)

FILE(GLOB_RECURSE MULTICAM_SRC "${CMAKE_CURRENT_SOURCE_DIR}/*.cpp")
ADD_LIBRARY(multicam "${MULTICAM_SRC}")

TARGET_INCLUDE_DIRECTORIES(${PROJECT_NAME}
	PUBLIC "${CMAKE_SOURCE_DIR}/include"
	PUBLIC "${OpenCV_INCLUDE_DIRS}"
	PRIVATE "${CUDA_INCLUDE_DIRS}"
	PRIVATE "/usr/include/spinnaker"
	)
TARGET_LINK_LIBRARIES(${PROJECT_NAME}
	PUBLIC "Spinnaker"
	PUBLIC "${CUDA_npp_LIBRARY}"
	PUBLIC "${CUDA_LIBRARIES}"
	PUBLIC "${OpenCV_LIBRARIES}"
	PUBLIC "${CMAKE_THREAD_LIBS_INIT}"
	PUBLIC "glog"
	)
